--- a/README.org
+++ b/README.org
@@ -1,10 +1,10 @@
 * Fall 2022 - Lab 14
 
-* Last name:
+* Last name: Ma
 
-* First name:
+* First name: Jinglun
 
-* GitHub username:
+* GitHub username: JinglunMa24
 
 * Notes:
 
